<resources>
    <string name="app_name">MizipTools</string>
    <string name="miziptools">MizipTools</string>
    <string name="dumper_la_cle">Dump tag</string>
    <string name="ecrire_une_nouvelle_cle">Write new tag</string>
    <string name="recharger_la_cle">Recharge tag</string>
    <string name="changer_l_uid">Change UID</string>
    <string name="reinitialiser_la_cle">Reset tag</string>
    <string name="activer">Activate</string>
    <string name="solde_en_euros">Money ($)</string>
    <string name="recharger">Recharge</string>
    <string name="uid">UID</string>
    <string name="changer">Change</string>
    <string name="cle_unique">Unique key</string>
    <string name="base_uid">XDXXXBXX</string>
    <string name="base_money">26.92</string>
    <string name="cles_a_et_b">A and B keys</string>
    <string name="base_key">FFFFFFFFFFFF</string>
    <string name="ecrire_la_cle">Write tag</string>
    <string name="nom_fichier_dump">Dump file name</string>
    <string name="parcourir">Search</string>
    <string name="cle_ecrite_avec_succes">Tag written succesfully !</string>
    <string name="dump_effectue_fichier">Dump done ! file :</string>
    <string name="cle_rechargee_avec_succes">Tag recharged succesfully !</string>
    <string name="uid_change_avec_succes">UID succesfully modified !</string>
    <string name="cle_reinitialisee_avec_succes">Tag succesfully reset !</string>
    <string name="erreur_dans_le_param">Error in the parameter :</string>
    <string name="solde">Money</string>
    <string name="cle">Key</string>
    <string name="nouveau_tag_trouv">"New Tag found : "</string>
    <string name="erreur_lors_de_l_criture_sur_le_tag">Error while writing to the tag</string>
    <string name="erreur_tag_enleve">Error while reading the tag : the tag was removed</string>
    <string name="erreur_de_communication">Error while communiocating with the tag : Wrong keys</string>
    <string name="pas_de_tag_d_tect">No tag detected</string>
    <string name="connection_avec_le_tag_perdue">Connection lost with the tag</string>
    <string name="pas_de_tag">No tag</string>
    <string name="euros">€</string>
    <string name="infos_tag">Tag info</string>
    <string name="erreur_lors_de_la_lecture_du_dump">Error while reading the dump</string>
    <string name="erreur_lors_de_la_lecture_du_template">Error while reading the template</string>
    <string name="erreur_lors_de_la_cr_ation_du_template">Error while creating the template</string>
    <string name="template_sauvegard">Template saved !</string>
    <string name="pas_de_template_s_lectionn">No template selected</string>
    <string name="erreur_lors_de_la_g_n_ration_des_cl_s_mauvais_uid">Error while generating keys : bad UID</string>
    <string name="erreur_lors_de_l_criture_du_fichier">Error while writing the file</string>
    <string name="param_tre_solde_invalide">\"Money\" parameter invalid</string>
    <string name="erreur_lors_de_la_lecture_du_solde_du_tag">Error while reading money on tag</string>
    <string name="param_tre_uid_invalide">\"UID\" parameter invalid</string>
    <string name="param_tre_cl_invalide">\"Key\" parameter invalid</string>
    <string name="lire_dump">Read dump</string>
    <string name="lire">Read</string>
    <string name="cr_er_template">Create template</string>
    <string name="erreur_on_ne_peut_pas_cr_er_un_template_partir_d_un_autre">Error : Can\'t create a template from another one</string>
    <string name="delete">Delete</string>
    <string-array name="placeholderSpinner">
    </string-array>
    <string name="lien_github"><a href='https://github.com/Laaen/MizipTools'>Project\'s github</a></string>
    <string name="by_laen">By Laen</string>
    <string name="enjoy_your_coffee">Enjoy your coffee ;)</string>
    <string name="about">About</string>
    <string name="fichier_dump">Dump file</string>
    <string name="pas_de_fichier_s_lectionn">No file selected</string>
    <string name="add_10_bucks">Add 10$</string>
    <string name="version">Version 1.0.1</string>

</resources>